--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>
             <img src="imagenes/logo.svg" name="logo">
         </div>
-        <nav>
+        <nav class="navHeader">
             <ul class="headerNav">
                 <li><a>Pricing</a></li>
                 <li><a>Product</a></li>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="centralDer">
-                <img src="/imagenes/illustration-intro.svg" alt="graficas">
+                <img src="imagenes/illustration-intro.svg" alt="graficas">
             </div>
         </section>
         <section class="central2">
@@ -87,21 +87,21 @@
             </div>
         </section>
         <!--Testimonios--> 
-        <section>
+        <section class="secOpiniones">
             <h2>What they´ve said</h2>
-            <div>
-                <div>
-                    <img src="/imagenes/avatar-anisha.png" alt="foto Anisha">
+            <div class="divOpiniones">
+                <div class="opinionesCentrado">
+                    <img src="imagenes/avatar-anisha.png" alt="foto Anisha">
                     <h6>Ali Bravo</h6>
                     <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
                 </div>
-                <div>
-                    <img src="/imagenes/avatar-ali.png" alt="foto Ali Bravo">
+                <div class="opinionesCentrado">
+                    <img src="imagenes/avatar-ali.png" alt="foto Ali Bravo">
                     <h6>Ali Bravo</h6>
                     <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
                 </div>
-                <div>
-                    <img src="/imagenes/avatar-richard.png" alt="foto Richard">
+                <div class="opinionesCentrado">
+                    <img src="imagenes/avatar-richard.png" alt="foto Richard">
                     <h6>Ali Bravo</h6>
                     <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
                 </div>
@@ -110,12 +110,11 @@
                 <input class="buttonSubmit" type="submit" value="GetStarted">
             </form>
         </section>
-        <section>
-            <h2>Simplify hoy your team
-                words today.</h2>
-                <form action="pagina2.html" method="POST">
-                    <input class="buttonSubmit" type="submit" value="GetStarted">
-                </form>
+        <section class="simplifySection">
+            <h2>Simplify hoy your team words today.</h2>
+            <form action="pagina2.html" method="POST">
+                <input class="buttonSubmit" type="submit" value="GetStarted">
+            </form>
         </section>
     </main>
     <footer>
@@ -147,7 +146,7 @@
         </nav>
         <div>
             <div>
-                <input type="text" name="UpdateInbox" placeholder="Update in your inbox...">
+                <input type="text" name="UpdateInbox" placeholder="Update in your inbox..." required>
                 <button type="submit">Go</button>
             </div>
             <p>Copyright 2020. All Rights Reserved</p>
