--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
             <h2>What they´ve said</h2>
             <div class="divOpiniones">
                 <div class="opinionesCentrado">
-                    <img src="imagenes/avatar-anisha.png" alt="foto Anisha">
+                    <picture><img src="imagenes/avatar-anisha.png" alt="foto Anisha"></picture>
                     <h6>Ali Bravo</h6>
                     <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
                 </div>
                 <div class="opinionesCentrado">
-                    <img src="imagenes/avatar-ali.png" alt="foto Ali Bravo">
+                    <picture><img src="imagenes/avatar-ali.png" alt="foto Ali Bravo"></picture>
                     <h6>Ali Bravo</h6>
                     <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
                 </div>
                 <div class="opinionesCentrado">
-                    <img src="imagenes/avatar-richard.png" alt="foto Richard">
+                    <picture><img src="imagenes/avatar-richard.png" alt="foto Richard"></picture>
                     <h6>Ali Bravo</h6>
                     <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can´t stop recommending them to everyone i talk to!”</p>
                 </div>
@@ -118,10 +118,10 @@
         </section>
     </main>
     <footer>
-        <div>
-            <img src="imagenes/logo.svg" name="logo">
+        <div class="columnasFooter">
+            <div class="logoFooter"><img src="imagenes/logo.svg" name="logo"></div>
             <!--utilizo fontawesome porque no puedo ver imagenes .svg -->
-            <div>
+            <div class="redesFooter">
                 <i class="fa-brands fa-facebook-square"></i>
                 <i class="fa-brands fa-youtube"></i>
                 <i class="fa-brands fa-twitter-square"></i>
@@ -129,8 +129,8 @@
                 <i class="fa-brands fa-instagram-square"></i>
             </div>
         </div>
-        <nav>
-            <ul>
+        <nav class="navFooter">
+            <ul class="listaFooter">
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="Pricing.html">Pricing</a></li>
                 <li><a href="Products.html">Products</a></li>
@@ -138,14 +138,14 @@
             </ul>
         </nav>
         <nav>
-            <ul>
+            <ul class="listaFooter">
                 <li><a href="Careers.html">Careers</a></li>
                 <li><a href="Community.html">Community</a></li>
                 <li><a href="Privacy Policy.html">Privacy Policy</a></li>
             </ul>
         </nav>
         <div>
-            <div>
+            <div class="buttonFooter">
                 <input type="text" name="UpdateInbox" placeholder="Update in your inbox..." required>
                 <button type="submit">Go</button>
             </div>
