--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <div class="navegador">
             <form  action="pagina2.html" method="POST">
-                <input class="buttonSubmit" type="submit" value="GetStarted">
+                <input class="buttonSubmit" type="submit" value="GetStarted" name="comenzar">
             </form>
         </div>
     </header>
@@ -43,7 +43,7 @@
                 </div>
                 <div>
                     <form action="pagina2.html" method="POST">
-                        <input class="buttonSubmit" type="submit" value="GetStarted">
+                        <input class="buttonSubmit" type="submit" value="GetStarted" name="comenzar2">
                     </form>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             <div class="central2der">
                 <div class="central2derecha">
                     <form action="" method="POST">
-                        <input type="submit" value="01">
+                        <input type="submit" value="01" name="uno">
                     </form>
                     <div class="h4yp">
                         <h4>Track company-wide progress</h4>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="central2derecha">
                     <form action="" method="POST">
-                        <input type="submit" value="02">
+                        <input type="submit" value="02" name="dos">
                     </form>
                     <div class="h4yp">
                         <h4>Advance built-in reports</h4>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="central2derecha">
                     <form action="" method="POST">
-                        <input type="submit" value="03">
+                        <input type="submit" value="03" name="tres">
                     </form>
                     <div class="h4yp">
                         <h4>Everything you need in one place</h4>
@@ -107,13 +107,13 @@
                 </div>
             </div>
             <form action="pagina2.html" method="POST">
-                <input class="buttonSubmit" type="submit" value="GetStarted">
+                <input class="buttonSubmit" type="submit" value="GetStarted" name="comenzar3">
             </form>
         </section>
         <section class="simplifySection">
             <h2>Simplify hoy your team words today.</h2>
             <form action="pagina2.html" method="POST">
-                <input class="buttonSubmit" type="submit" value="GetStarted">
+                <input class="buttonSubmit" type="submit" value="GetStarted" name="comenzar4">
             </form>
         </section>
     </main>
@@ -122,11 +122,11 @@
             <div class="logoFooter"><img src="imagenes/logo.svg" name="logo"></div>
             <!--utilizo fontawesome porque no puedo ver imagenes .svg -->
             <div class="redesFooter">
-                <i class="fa-brands fa-facebook-square"></i>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-twitter-square"></i>
-                <i class="fa-brands fa-pinterest"></i>
-                <i class="fa-brands fa-instagram-square"></i>
+                <a href="www.facebook.com"><i class="fa-brands fa-facebook-square"></i></a>
+                <a href="www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                <a href="www.twitter.com"><i class="fa-brands fa-twitter-square"></i></a>
+                <a href="www.pinterest.com"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="www.instagram.com"><i class="fa-brands fa-instagram-square"></i></a>
             </div>
         </div>
         <nav class="navFooter">
@@ -144,7 +144,7 @@
                 <li><a href="Privacy Policy.html">Privacy Policy</a></li>
             </ul>
         </nav>
-        <div>
+        <div class="footerDer">
             <div class="buttonFooter">
                 <input type="text" name="UpdateInbox" placeholder="Update in your inbox..." required>
                 <button type="submit">Go</button>
